# decko_python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_deck.py  comprehensive_deck.py  comprehensive_deck_theme.css  data_deck.py  rich_text_deck.py
src/decko_py/: __init__.py  builder.py  cdn.py  registry.py  renderer.py  validator.py
src/decko_py/models/: __init__.py  animation.py  blocks.py  catalog.py  composition.py  rich_text.py  slide.py  template.py  theme.py  transition.py  typed_slides.py
src/decko_py/models/utils/: text_utils.py
tests/: conftest.py  test_builder.py  test_cdn.py  test_registry.py  test_renderer.py  test_validator.py
tests/models/: test_animation.py  test_blocks.py  test_composition.py  test_rich_text.py  test_slide.py  test_template.py  test_theme.py  test_transition.py  test_typed_slides_budget.py
