[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decko-py"
version = "0.1.0"
description = "Python wrapper for Decko — build, validate, and render presentations programmatically"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["decko", "presentations", "slides", "pydantic"]
dependencies = [
    "pydantic>=2.0",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/decko_py"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP007"]  # Allow Union[X, Y] syntax (3.8 compat clarity)

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.8"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "decko_py.models.blocks"
disallow_any_generics = false

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=decko_py --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/decko_py"]
